[TRINHHC] Add test for heroku

--- a/asp/src/main/resources/application.properties
+++ b/asp/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/roomate
-spring.datasource.username=root
-spring.datasource.password=1809
+spring.datasource.url=jdbc:mysql://db4free.net:3306/asp_backend
+spring.datasource.username=asp_backend
+spring.datasource.password=strongpwd
+#spring.datasource.url=jdbc:mysql://localhost:3306/roomate
+#spring.datasource.username=root
+#spring.datasource.password=1809
