--- a/Roommate/Info.plist
+++ b/Roommate/Info.plist
@@ -52,6 +52,13 @@
                 <key>NSIncludesSubdomains</key>
                 <true/>
             </dict>
+<!--            <key>https://maps.googleapis.com</key>-->
+<!--            <dict>-->
+<!--                <key>NSExceptionAllowsInsecureHTTPLoads</key>-->
+<!--                <true/>-->
+<!--                <key>NSIncludesSubdomains</key>-->
+<!--                <true/>-->
+<!--            </dict>-->
         </dict>
     </dict>
 </dict>
