--- a/asp/src/main/resources/application.properties
+++ b/asp/src/main/resources/application.properties
@@ -4,3 +4,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/asp
 spring.datasource.username=root
 spring.datasource.password=bu07049092
+
+log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.type.descriptor.sql=trace
