--- a/asp/src/main/resources/application.properties
+++ b/asp/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 #spring.datasource.url=jdbc:mysql://db4free.net:3306/asp_backend
 #spring.datasource.username=asp_backend
 #spring.datasource.password=strongpwd
-spring.datasource.url=jdbc:mysql://localhost:3306/roomate
+spring.datasource.url=jdbc:mysql://localhost:3306/roommate
 spring.datasource.username=root
-spring.datasource.password=1809
-
-log4j.logger.org.hibernate.SQL=debug
-log4j.logger.org.hibernate.type.descriptor.sql=trace
+spring.datasource.password=strongpwd
+spring.jpa.show-sql=true
