--- a/asp/src/main/resources/application.properties
+++ b/asp/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://db4free.net:3306/asp_backend
 #spring.datasource.username=asp_backend
 #spring.datasource.password=strongpwd
-spring.datasource.url=jdbc:mysql://localhost:3306/roommate
+spring.datasource.url=jdbc:mysql://localhost:3306/asp
 spring.datasource.username=root
-spring.datasource.password=strongpwd
+spring.datasource.password=bu07049092
 spring.jpa.show-sql=true
