--- a/asp/src/main/resources/application.properties
+++ b/asp/src/main/resources/application.properties
@@ -1,7 +1,23 @@
 #spring.datasource.url=jdbc:mysql://db4free.net:3306/asp_backend
 #spring.datasource.username=asp_backend
 #spring.datasource.password=strongpwd
-spring.datasource.url=jdbc:mysql://localhost:3306/asp
+spring.datasource.url=jdbc:mysql://localhost:3306/roommate
 spring.datasource.username=root
-spring.datasource.password=bu07049092
+spring.datasource.password=strongpwd
 spring.jpa.show-sql=true
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=10MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=10MB
+
+#Amazon S3 config
+amazonProperties.endpointUrl=https://s3-ap-southeast-1.amazonaws.com
+amazonProperties.bucketName=asp-backend/image
+amazonProperties.accessKey=AKIAIJTWBMAHQB3SIV2A
+amazonProperties.secretKey=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
