[TRINHHC] Edit upload Image API

--- a/asp/src/main/resources/application.properties
+++ b/asp/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
-spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.file-size-threshold=256KB
 # Max file size.
 spring.servlet.multipart.max-file-size=10MB
 # Max Request Size
@@ -19,5 +19,5 @@ spring.servlet.multipart.max-request-size=10MB
 #Amazon S3 config
 amazonProperties.endpointUrl=https://s3-ap-southeast-1.amazonaws.com
 amazonProperties.bucketName=asp-backend/image
-amazonProperties.accessKey=AKIAIJTWBMAHQB3SIV2A
-amazonProperties.secretKey=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
+amazonProperties.accessKey=AKIAJ2NQ7TDHF2JO7BZQ
+amazonProperties.secretKey=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
