--- a/asp/pom.xml
+++ b/asp/pom.xml
@@ -85,6 +85,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.maps/google-maps-services -->
+		<dependency>
+			<groupId>com.google.maps</groupId>
+			<artifactId>google-maps-services</artifactId>
+			<version>0.2.11</version>
+		</dependency>
+
 
 	</dependencies>
 
