--- a/asp/src/main/resources/application.properties
+++ b/asp/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.datasource.password=strongpwd
 spring.datasource.url=jdbc:mysql://localhost:3306/asp
 spring.datasource.username=root
-spring.datasource.password=bu07049092
+spring.datasource.password=1809
 spring.jpa.show-sql=true
 
 ## MULTIPART (MultipartProperties)
