--- a/asp/pom.xml
+++ b/asp/pom.xml
@@ -92,6 +92,12 @@
 			<version>0.2.11</version>
 		</dependency>
 
+		<!--Firebase-->
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>6.5.0</version>
+		</dependency>
 
 	</dependencies>
 
