--- a/asp/src/main/resources/application.properties
+++ b/asp/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.datasource.url=jdbc:mysql://db4free.net:3306/asp_backend
 #spring.datasource.username=asp_backend
 #spring.datasource.password=strongpwd
-spring.datasource.url=jdbc:mysql://localhost:3306/asp
+spring.datasource.url=jdbc:mysql://localhost:3306/roommate
 spring.datasource.username=root
-spring.datasource.password=bu07049092
+spring.datasource.password=strongpwd
 
 spring.jpa.show-sql=true
 
@@ -20,8 +20,8 @@ spring.servlet.multipart.max-request-size=10MB
 #Amazon S3 config
 amazonProperties.endpointUrl=https://s3-ap-southeast-1.amazonaws.com
 amazonProperties.bucketName=asp-backend/image
-amazonProperties.accessKey=AKIAJBNZQWGA6MWHB76Q
-amazonProperties.secretKey=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
+amazonProperties.accessKey=AKIAI6ZIYEWR3QN3UNSA
+amazonProperties.secretKey=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
 
 spring.mvc.view.prefix=/jsp/
 spring.mvc.view.suffix=.jsp
