--- a/asp/src/main/resources/application.properties
+++ b/asp/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #spring.datasource.url=jdbc:mysql://db4free.net:3306/asp_backend
 #spring.datasource.username=asp_backend
 #spring.datasource.password=strongpwd
-spring.datasource.url=jdbc:mysql://localhost:3306/roommate
+spring.datasource.url=jdbc:mysql://roommatedb.clxtmg5rsmpy.ap-southeast-1.rds.amazonaws.com:3306/roommate
 spring.datasource.username=root
 spring.datasource.password=strongpwd
+
 
 spring.jpa.show-sql=true
 
@@ -20,8 +21,10 @@ spring.servlet.multipart.max-request-size=10MB
 #Amazon S3 config
 amazonProperties.endpointUrl=https://s3-ap-southeast-1.amazonaws.com
 amazonProperties.bucketName=asp-backend/image
-amazonProperties.accessKey=AKIAI6ZIYEWR3QN3UNSA
-amazonProperties.secretKey=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
-
+amazonProperties.accessKey=AKIAJB5RDLXQ2L3WRIKA
+amazonProperties.secretKey=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
+#amazonProperties.accessKey=AKIAJDDLYRVZ6RRBLANQ
+#amazonProperties.secretKey=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
+endpoints.shutdown.enabled=true
 spring.mvc.view.prefix=/jsp/
 spring.mvc.view.suffix=.jsp
